apis/shopper-baskets/examples/error/price-adjustment-id-not-found-exception.raml
#%RAML 1.0 NamedExample
value:
  {
      "type": "https://api.commercecloud.salesforce.com/documentation/error/v1/errors/price-adjustment-not-found",
      "title": "Price Adjustment Not Found",
      "detail": "No price adjustment with ID '453599643347eac5e4ebd85b49' could be found."
  }